Hopefully fixes backface visibility issue in Safari */

--- a/css/style.css
+++ b/css/style.css
@@ -1157,6 +1157,7 @@ a:hover {
 		height: 100%;
 		max-height: 100%;
 		/* border: 2px solid red; */
+		-webkit-backface-visibility: hidden; /* Safari */
 		backface-visibility: hidden;
 		/* Display options */
 		/* Option 1 - -webkit-box */
@@ -1181,7 +1182,6 @@ a:hover {
 	  
 	.card-back {
 		/* font-size: 15px; */
-		height: 205px;
 		/*overflow: hidden;
 		text-overflow: ellipsis;
 		word-wrap: break-word;
@@ -1192,7 +1192,6 @@ a:hover {
 	}
 
 
- 
 	.card {
 		/* border-radius: 4px;
 		background-color: #b5c1d4;
